find response type fix
