# static/swagger.json
@@ -15,7 +15,7 @@
     "paths": {
         "/ldap/find": {
             "post": {
-                "description": "EG;\u003cbr\u003eByRG81IDDPQFY9+9dSaWFKIA3Xp1vZhrpCjCg4XXR7gnNxLM9SvgTK1PFKMrsdE5s4mNRSIo8qJhzeZAdMi5zQfAhJOV8FDdmEs=\u003cbr\u003eSearchBase: \"dc=example,dc=com\"\u003cbr\u003eSearchFilter: \"(objectClass=person)\"",
+                "description": "EG;\u003cbr\u003eByRG81IDDPQFY9+9dSaWFKIA3Xp1vZhrpCjCg4XXR7gnNxLM9SvgTK1PFKMrsdE5s4mNRSIo8qJhzeZAdMi5zQfAhJOV8FDdmEs=\u003cbr\u003eSearchBase: dc=example,dc=com\u003cbr\u003eSearchFilter: (objectClass=person)",
                 "consumes": [
                     "application/json"
                 ],
@@ -94,10 +94,6 @@
     "definitions": {
         "controllers.FindRequest": {
             "type": "object",
-            "required": [
-                "search_base",
-                "search_filter"
-            ],
             "properties": {
                 "attributes": {
                     "type": "array",
@@ -105,31 +101,21 @@
                         "type": "string"
                     }
                 },
-                "search_base": {
+                "searchBase": {
                     "type": "string"
                 },
-                "search_filter": {
+                "searchFilter": {
                     "type": "string"
                 }
             }
         },
         "controllers.FindResponse": {
             "type": "object",
-            "required": [
-                "data",
-                "message",
-                "status"
-            ],
             "properties": {
                 "data": {
-                    "type": "object",
-                    "required": [
-                        "session_token"
-                    ],
-                    "properties": {
-                        "session_token": {
-                            "type": "string"
-                        }
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/ldap_connector.LdapEntry"
                     }
                 },
                 "message": {
@@ -142,38 +128,25 @@
         },
         "controllers.LoginRequest": {
             "type": "object",
-            "required": [
-                "bind_dn",
-                "bind_password",
-                "ldap_url"
-            ],
             "properties": {
-                "bind_dn": {
+                "bindDN": {
                     "type": "string"
                 },
-                "bind_password": {
+                "bindPassword": {
                     "type": "string"
                 },
-                "ldap_url": {
+                "ldapURL": {
                     "type": "string"
                 }
             }
         },
         "controllers.LoginResponse": {
             "type": "object",
-            "required": [
-                "data",
-                "message",
-                "status"
-            ],
             "properties": {
                 "data": {
                     "type": "object",
-                    "required": [
-                        "session_token"
-                    ],
                     "properties": {
-                        "session_token": {
+                        "sessionToken": {
                             "type": "string"
                         }
                     }
@@ -183,6 +156,46 @@
                 },
                 "status": {
                     "type": "integer"
+                }
+            }
+        },
+        "ldap_connector.LdapEntry": {
+            "type": "object",
+            "properties": {
+                "attributes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/ldap_connector.LdapEntryAttribute"
+                    }
+                },
+                "dn": {
+                    "type": "string"
+                }
+            }
+        },
+        "ldap_connector.LdapEntryAttribute": {
+            "type": "object",
+            "properties": {
+                "byteValues": {
+                    "description": "ByteValues contain the raw values of the attribute",
+                    "type": "array",
+                    "items": {
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        }
+                    }
+                },
+                "name": {
+                    "description": "Name is the name of the attribute",
+                    "type": "string"
+                },
+                "values": {
+                    "description": "Values contain the string values of the attribute",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         }
